--- a/SimCity V1.0.cbp
+++ b/SimCity V1.0.cbp
@@ -36,16 +36,16 @@
 		</Compiler>
 		<Unit filename="gameengine.cpp" />
 		<Unit filename="gameengine.hpp" />
-		<Unit filename="helpstate.cpp" />
-		<Unit filename="helpstate.hpp" />
-		<Unit filename="iomanager.cpp" />
-		<Unit filename="iomanager.hpp" />
 		<Unit filename="main.cpp" />
-		<Unit filename="mapmanager.cpp" />
-		<Unit filename="mapmanager.hpp" />
-		<Unit filename="menustate.cpp" />
-		<Unit filename="menustate.hpp" />
-		<Unit filename="states.hpp" />
+		<Unit filename="manager/iomanager.cpp" />
+		<Unit filename="manager/iomanager.hpp" />
+		<Unit filename="manager/mapmanager.cpp" />
+		<Unit filename="manager/mapmanager.hpp" />
+		<Unit filename="state/helpstate.cpp" />
+		<Unit filename="state/helpstate.hpp" />
+		<Unit filename="state/menustate.cpp" />
+		<Unit filename="state/menustate.hpp" />
+		<Unit filename="state/state.hpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 			<code_completion />
