--- a/SimCity V1.0.cbp
+++ b/SimCity V1.0.cbp
@@ -38,13 +38,13 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="gameengine.cpp" />
-		<Unit filename="gameengine.hpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="manager/iomanager.cpp" />
 		<Unit filename="manager/iomanager.hpp" />
 		<Unit filename="manager/mapmanager.cpp" />
 		<Unit filename="manager/mapmanager.hpp" />
+		<Unit filename="manager/statemanager.cpp" />
+		<Unit filename="manager/statemanager.hpp" />
 		<Unit filename="manager/timemanager.cpp" />
 		<Unit filename="manager/timemanager.hpp" />
 		<Unit filename="state/helpstate.cpp" />
