--- a/SimCity V1.0.cbp
+++ b/SimCity V1.0.cbp
@@ -16,6 +16,7 @@
 					<Add directory="./" />
 					<Add directory="C:/Users/TheLight/Desktop/kie1008-a2/manager" />
 					<Add directory="manager" />
+					<Add directory="state" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -28,6 +29,7 @@
 					<Add directory="./" />
 					<Add directory="C:/Users/TheLight/Desktop/kie1008-a2/manager" />
 					<Add directory="manager" />
+					<Add directory="state" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -47,6 +49,8 @@
 		<Unit filename="manager/statemanager.hpp" />
 		<Unit filename="manager/timemanager.cpp" />
 		<Unit filename="manager/timemanager.hpp" />
+		<Unit filename="state/gamestate.cpp" />
+		<Unit filename="state/gamestate.hpp" />
 		<Unit filename="state/helpstate.cpp" />
 		<Unit filename="state/helpstate.hpp" />
 		<Unit filename="state/menustate.cpp" />
