--- a/SimCity V1.0.cbp
+++ b/SimCity V1.0.cbp
@@ -42,7 +42,6 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="economy.cpp" />
 		<Unit filename="engine/economy.cpp" />
 		<Unit filename="engine/economy.hpp" />
 		<Unit filename="engine/map.cpp" />
@@ -67,6 +66,9 @@
 		<Unit filename="state/state.hpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
+			<code_completion />
+			<envvars />
+			<debugger />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
